--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ ion-icon{
 }
 .table-style{
   padding-top: 20px;
-  padding-bottom: 50px;
 }
 .table-style thead{
   color: #fff;
@@ -40,7 +39,8 @@ ion-icon{
 .table-style th{
   text-align: center;
 }
-.table-style td{
+.table-style tbody{
+  background-color: rgba(255, 255, 255, 1);
   text-align: center;
 }
 input[type=number]::-webkit-inner-spin-button, 
@@ -51,4 +51,7 @@ input[type=number]::-webkit-outer-spin-button {
 input[type=number] { -moz-appearance:textfield; }
 .error{
   color: red;
+}
+.btn{
+  cursor: pointer;
 }
