--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,20 @@ ion-icon{
 .table-style{
   padding-top: 20px;
 }
+.table-responsive{
+  overflow-y: scroll;
+  height:440px;
+}
+@media screen and (max-width: 750px){
+  .table-responsive{
+    overflow-y: scroll;
+    height:300px;
+  }
+  .table-style{
+    padding-top: 20px;
+    padding-bottom: 40px;
+  }
+}
 .table-style thead{
   color: #fff;
   background-color: #161d27;
@@ -48,10 +62,23 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
-input[type=number] { -moz-appearance:textfield; }
+input[type=number] {
+  -moz-appearance:textfield;
+}
 .error{
   color: red;
 }
 .btn{
+  margin: 2px;
   cursor: pointer;
+}
+#balance{
+  background-color: #fff;
+  color: #161d27;
+  margin-top: 20px;
+  width: 100%;
+  height: auto;
+  padding-top: 5px;
+  padding-bottom: 1px;
+  border-radius: 5px;
 }
